--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,11 @@ dependencies = [
     "click>=8.1.8",
     "exchange-calendars>=4.5.6",
     "matplotlib>=3.9.4",
+    "pandas>=2.3.3",
+    "pandas-market-calendars>=5.2.4",
     "quantlib>=1.41",
     "workalendar>=17.0.0",
+    "openpyxl>=3.1.5",
 ]
 
 [project.scripts]
